src/test/resources/com/puppycrawl/tools/checkstyle/design/InputInnerClassCheck#methodTestInner2().mjava
	public void methodTestInner2() {
		int test5 = 500;

		class InnerInMethod2 {
			int test6 = 500;
		}

		int test6 = 600; //error
		int test8 = 800; //error
	}

